z-index fix for the frontend admin overlay

--- a/woost/views/resources/styles/adminfrontendpanel.scss
+++ b/woost/views/resources/styles/adminfrontendpanel.scss
@@ -7,6 +7,7 @@ $hl-color: #db8417;
     position: fixed;
     left: 0;
     bottom: 0;
+    z-index: 100000;
 
     .edit_button {
         display: inline-block;
